--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -9,7 +9,7 @@
 
 	<div class="text-white text-smaller">
 		<p>	Takk for din påmelding! </p>
-		<p> Du vil bli kontaktet kontaktinformasjonen du har oppgitt hvis du vinner. </p>
+		<p>Hvis du vinner tar vi kontakt ved hjelp av kontaktinformasjonen du har oppgitt.</p>
 	</div>
 	<br>
 
