--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -13,8 +13,7 @@
 		
 		<p> Hvis du vil være med i trekningen av premien, kan du fylle
 			ut informasjonen under. </p>
-		<p> Bouvet vil ikke bruke informasjonen til noe annet formål enn selve trekningen.</p> 
-		<p>Data vil bli slettet etter trekningen.</p>
+		<p>Informasjonen du har oppgitt vil bli slettet etter trekningen, og ikke benyttes av Bouvet til annet formål</p>
 	</div>
 
 	<br>
